--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   # Utils
   intl: ^0.19.0
   uuid: ^4.5.1
+  equatable: ^2.0.5
   url_launcher: ^6.3.1
   share_plus: ^10.0.2
   image_picker: ^1.1.2
