--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
 
   # Storage
   shared_preferences: ^2.3.2
+  flutter_secure_storage: ^9.2.2
   drift: ^2.20.3
   sqlite3_flutter_libs: ^0.5.24
   path_provider: ^2.1.4
@@ -95,7 +96,7 @@ dev_dependencies:
   riverpod_generator: ^2.4.3
   build_runner: ^2.4.13
   riverpod_lint: ^2.3.13
-  custom_lint: ^0.6.7
+  custom_lint: ^0.7.6
   drift_dev: ^2.20.3
 
 flutter:
