--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   equatable: ^2.0.5
   url_launcher: ^6.3.1
   share_plus: ^10.0.2
+  webview_flutter: ^4.10.0
   image_picker: ^1.1.2
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
